--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -10,8 +10,11 @@
         justify-content: space-around;
         margin-top: 50px;
 
-        &__item{
+        @media (max-width: 768px) {
+            display: block;
+        }
 
+        &__item{
             text-align: center;
             padding: 60px 44px 44px;
             max-width: 380px;
