--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $corDeFundo: #040714;
 $textoPrincipal: silver;
 $corTextoSecundario: #f9f9f9;
+$corDeFundoBotaoPrimario: #6421ff;
+$corDeFundoBotaoSecondario:#0063e5;
+$corDeFundoBotaoDark: rgba(0,0,0,0.8);
