--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,9 @@
 @use 'shows';
 @use 'plans';
 @use 'available-devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
 
 @font-face {
     font-family: Avenir;
@@ -21,10 +24,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style: none;
 }
 
 body {
     background-color: variaveis.$corDeFundo;
+    letter-spacing: .2px;
 }
 
 @mixin text($fontSize: 16px) {
@@ -70,17 +75,44 @@ body {
 
 
 .button {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$corTextoSecundario;
-    background-color: #6421ff;
+    background-color: variaveis.$corDeFundoBotaoPrimario;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$corDeFundoBotaoPrimario;
+    &:hover {
+        background-color: lighten(variaveis.$corDeFundoBotaoPrimario, 3%);
+        transition: .2s ease;
+    }
     cursor: pointer;
+
+    &--secondary {
+        background-color: variaveis.$corDeFundoBotaoSecondario;
+        border-color: variaveis.$corDeFundoBotaoSecondario;
+        &:hover {
+            background-color: lighten(variaveis.$corDeFundoBotaoSecondario, 3%);
+            transition: .2s ease;
+        }
+    }
+
+    &--dark {
+        background-color: variaveis.$corDeFundoBotaoDark;
+        border-color: variaveis.$corTextoSecundario;
+        &:hover {
+            background-color: variaveis.$corTextoSecundario ;
+            color: variaveis.$corDeFundo;
+            transition: .2s ease;
+        }
+    }
 }
 
 .image-text-section {
@@ -88,6 +120,11 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+
+
+    @media (max-width: 768px) {
+        display: block;
+    }
 
     img {
         max-width: 100%;
@@ -118,6 +155,12 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            @media (max-width: 768px) {
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
         }
     }
 }
