--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -14,6 +14,10 @@
             display: block;
         }
 
+        .button {
+            margin-top: 24px;
+        }
+
         &__item{
             text-align: center;
             padding: 60px 44px 44px;
