--- a/src/styles/shows.scss
+++ b/src/styles/shows.scss
@@ -29,6 +29,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
+
         &__button {
             color: variaveis.$corTextoSecundario;
             font-size: 20px;
@@ -42,6 +48,11 @@
             
             &--is-active {
                 border-color: variaveis.$corTextoSecundario;
+            }
+
+
+            @media (max-width: 768px) {
+                font-size: 16px;
             }
         }
     }
